# memex-mvp

./: .gitignore  .npmignore  CHANGELOG.md  HELP.md  LICENSE  MULTI_MACHINE.md  README.md  README.ru.md  SYNC.md  ingest.js  install.sh  package.json  server.js
bot/: README.md  config.js  inbox.js  index.js  nexara.js  poll.js  search.js  telegram.js
docs/: CNAME  index.html  install.sh
docs/design/: url-ingestion.md
docs/hermes/: index.html
docs/openclaw/: index.html
docs/v3/: index.html
docs/v4/: index.html
docs/v5/: index.html
docs/v6/: index.html
docs/v7/: index.html
lib/: config.js  db-init.js  import-telegram.js  ingest-file.js  notify-click-action.js  openclaw-channel.js  parse-cursor.js  parse-obsidian.js  parse-telegram-html.js  parse.js  render-markdown.js  telegram-decisions.js  telegram-discovery.js  telegram-notify.js  telegram-pending.js
lib/cli/: index.js
lib/hook/: install.js
lib/store-doc/: canonicalize.js  detect.js  extract-title.js
lib/sync/: auth.js  cert.js  cli.js  client.js  config.js  pair.js  pull.js  push.js  replicate.js  server.js  service.js
lib/web/: index.js  templates.js
lib/web/routes/: conversation.js  conversations.js  dashboard.js  pending.js  settings.js
lib/web/static/: style.css
plugins/memex-hermes/: .gitignore  README.md  pyproject.toml
plugins/memex-hermes/memex_hermes/: __init__.py  backfill.py  conv_id.py  install_shim.py  plugin.yaml  prefetch.py  provider.py  store.py  store_doc.py  tools.py
plugins/memex-hermes/tests/: test_backfill.py  test_conv_id.py  test_install_shim.py  test_prefetch.py  test_provider.py  test_state_tail.py  test_store.py  test_store_doc.py  test_tools.py
plugins/memex-openclaw/: .gitignore  README.md  index.js  openclaw.plugin.json  package.json
plugins/memex-openclaw/lib/: backfill.js  conv_id.js  corpus_supplement.js  restart-detect.js  setup.js  store.js  tools.js
plugins/memex-openclaw/tests/: backfill.test.js  conv_id.test.js  corpus_supplement.test.js  restart-detect.test.js  setup.test.js  store.test.js  tools.test.js
scripts/: publish-skill-claw.sh  publish-skill-openclaw.sh  publish-skill.sh  verify-tracer-install.sh
skills/install-memex/: README.md  SKILL.md  examples.md
skills/install-memex-claw/: SKILL.md
skills/install-memex-openclaw/: SKILL.md
test/: bot-inbox.test.js  cli.test.js  e2e-inbox.test.js  hook.test.js  inbox-watcher.test.js  ingest-file.test.js  notify-click-action.test.js  openclaw-channel-e2e.test.js  openclaw-channel.test.js  parser.test.js  search-sort.test.js  store-document.test.js  telegram-decisions.test.js  telegram-html.test.js  telegram-notify.test.js  telegram-pending.test.js  wire-openclaw.test.js
test/fixtures/telegram-html/ChatExport_Test/: messages.html
test/sync/: adaptive-batch.test.js  cli-end-to-end.test.js  mcp-invite.test.js  pair.test.js  push-pull-roundtrip.test.js  server-bootstrap.test.js  service.test.js  skip-accounting.test.js
