[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "memex-hermes"
version = "0.2.1"
description = "Bridges Hermes Agent into the memex unified-memory corpus — pair with memex-mvp for one searchable history across Hermes, Claude Code, OpenClaw, Telegram, and more. Single-client Hermes users likely don't need this; Hermes built-in memory already covers that case."
readme = "README.md"
authors = [{ name = "parallelclaw", email = "sedelev@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Front-Ends",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
keywords = [
    "hermes",
    "hermes-agent",
    "nous-research",
    "memory",
    "verbatim",
    "local-first",
    "sqlite",
    "fts5",
    "memex",
    "parallelclaw",
    "mcp",
    "ai-memory",
]
# Almost stdlib-only — PyYAML is added in v0.2.0 for safe editing of
# ~/.hermes/config.yaml during `memex-hermes setup`. It's universally
# present in Hermes-having environments (Hermes itself uses YAML), but
# we declare it explicitly so pure-Python installs work without surprises.
dependencies = ["PyYAML>=5.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://memex.parallelclaw.ai"
Repository = "https://github.com/parallelclaw/memex-mvp"
Issues = "https://github.com/parallelclaw/memex-mvp/issues"
Documentation = "https://github.com/parallelclaw/memex-mvp/tree/main/plugins/memex-hermes"

# Hermes plugin entry point — declared for forward compat with future
# Hermes versions that may use importlib.metadata. As of Hermes v0.10.x,
# this is IGNORED — Hermes discovers plugins purely by scanning folders
# at ~/.hermes/plugins/memory/<name>/. The `memex-hermes init` CLI below
# creates the required shim folder.
[project.entry-points."hermes_agent.plugins"]
memex = "memex_hermes"

# CLIs:
#   memex-hermes          install/uninstall/status the Hermes plugin shim
#   memex-hermes-backfill one-shot import of ~/.hermes/state.db → memex.db
[project.scripts]
memex-hermes = "memex_hermes.install_shim:main"
memex-hermes-backfill = "memex_hermes.backfill:main"

[tool.setuptools]
packages = ["memex_hermes"]

[tool.setuptools.package-data]
memex_hermes = ["plugin.yaml"]
